[gd_scene load_steps=5 format=3 uid="uid://e8rhirvypqcq"]

[ext_resource type="Script" uid="uid://1kr25032t5uq" path="res://ca3 framework/2D Battle/fireballs/Linear/fireballlineal.gd" id="1_0wlqg"]
[ext_resource type="Script" uid="uid://bb235qqjy4d27" path="res://ca3 framework/2D Battle/fireballs/Linear/fireball_area_2d.gd" id="2_pc4oy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_idmd1"]
radius = 5.09902

[sub_resource type="CircleShape2D" id="CircleShape2D_uxkd1"]
radius = 28.1603

[node name="NecromancerFireball" type="CharacterBody2D"]
collision_layer = 64
collision_mask = 64
script = ExtResource("1_0wlqg")
speed = 400.0
Is_Necromancer = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -26.0
offset_top = -52.0
offset_right = 29.0
offset_bottom = 1.0
color = Color(0.301961, 0.0745098, 0.294118, 0.870588)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_idmd1")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 16
script = ExtResource("2_pc4oy")
is_fireball = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2, -25)
shape = SubResource("CircleShape2D_uxkd1")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
