[gd_scene load_steps=6 format=3 uid="uid://cawfrxjavd7t7"]

[ext_resource type="Script" uid="uid://1kr25032t5uq" path="res://ca3 framework/2D Battle/fireballs/Linear/fireballlineal.gd" id="1_8lcmj"]
[ext_resource type="Texture2D" uid="uid://bmq482v48lmky" path="res://ca3 framework/2D Battle/fireballs/Linear/fireball.png" id="1_u8md0"]
[ext_resource type="Script" uid="uid://bb235qqjy4d27" path="res://ca3 framework/2D Battle/fireballs/Linear/fireball_area_2d.gd" id="3_ot1rk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_idmd1"]
radius = 5.09902

[sub_resource type="CircleShape2D" id="CircleShape2D_uxkd1"]
radius = 28.1603

[node name="Fireball" type="CharacterBody2D" groups=["FIREBALL"]]
collision_layer = 4
collision_mask = 8
script = ExtResource("1_8lcmj")
damage = 80

[node name="Fireball" type="Sprite2D" parent="."]
y_sort_enabled = true
position = Vector2(0, 3)
texture = ExtResource("1_u8md0")
offset = Vector2(0, -28)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_idmd1")

[node name="FireballArea" type="Area2D" parent="." groups=["FIREBALL"]]
collision_layer = 5
collision_mask = 89
script = ExtResource("3_ot1rk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FireballArea"]
position = Vector2(2, -25)
shape = SubResource("CircleShape2D_uxkd1")

[node name="AutoDelete" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="area_entered" from="FireballArea" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="AutoDelete" to="." method="_on_auto_delete_timeout"]
